--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mercadopago/sdk-react": "^0.0.12",
     "@types/node": "20.3.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "mercadopago": "^1.5.16",
     "next": "13.4.7",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
@@ -23,5 +25,9 @@
     "sass": "^1.63.6",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@types/mercadopago": "^1.5.8",
+    "prisma": "^4.16.1"
   }
 }
